# aircraft-manufacturing-system

./: .gitignore  .prettierrc  README.md  pyproject.toml  requirements.txt
aircraft_manufacturing/: manage.py
aircraft_manufacturing/accounts/: admin.py  apps.py  constants.py  filters.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
aircraft_manufacturing/accounts/templatetags/: account_tags.py
aircraft_manufacturing/accounts/tests/: test_models.py  test_permissions.py  test_utils.py  test_views.py
aircraft_manufacturing/aircraft_manufacturing/: asgi.py  logger.py  pagination.py  responses.py  urls.py  wsgi.py
aircraft_manufacturing/aircraft_manufacturing/settings/: base.py  local.py  production.py  test.py
aircraft_manufacturing/assembly/: admin.py  apps.py  constants.py  filters.py  models.py  serializers.py  urls.py  views.py
aircraft_manufacturing/assembly/tests/: test_models.py  test_views.py
aircraft_manufacturing/frontend/static/js/: aircraft.js  index.js  inventory.js  parts.js
aircraft_manufacturing/frontend/templates/: base.html  index.html
aircraft_manufacturing/frontend/templates/aircraft/: list.html
aircraft_manufacturing/frontend/templates/inventory/: status.html
aircraft_manufacturing/inventory/: admin.py  apps.py  constants.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
aircraft_manufacturing/inventory/tests/: test_models.py  test_views.py
aircraft_manufacturing/management/scripts/: init.sh
deploy/: Dockerfile  docker-compose.yml  nginx.conf  supervisor.conf
(+4 files in other folders)
